# winter2026-lectures

./: .gitignore  README.md  TODO.md  pyproject.toml
assets/css/: uchicago-theme.css
lecture-01/: index.html  tokenize.ipynb  tokenize.slides.html
lecture-02/: index.html  word_embedding.html  word_embedding.ipynb
