[project]
name = "winter2025-lectures"
version = "0.1.0"
description = "CMSC 25700/35100 Natural Language Processing Course Materials"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "jupyterlab_rise>=0.42.0",
    "nltk>=3.8.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "spacy>=3.7.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.setuptools]
packages = []
